--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "HTML5-History-API"]
-	path = HTML5-History-API
-	url = https://github.com/devote/HTML5-History-API.git
+[submodule "lib/HTML5-History-API"]
+	path = lib/HTML5-History-API
+	url = git@github.com:devote/HTML5-History-API.git
