--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/HTML5-History-API"]
 	path = lib/HTML5-History-API
-	url = git@github.com:devote/HTML5-History-API.git
+	url = https://github.com/devote/HTML5-History-API.git
